--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                     </div>
                     <div class="contact-item">
                         <i class="fab fa-linkedin"></i>
-                        <span>LinkedIn</span>
+                        <a href="https://www.linkedin.com/in/tomasz-głowacki-a266a297/" target="_blank" style="color: inherit; text-decoration: none;">LinkedIn</a>
                     </div>
                 </div>
             </div>
