--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="profile-img">
-                    <i class="fas fa-user"></i>
+                    <img src="Profile_img.png" alt="Tomasz Głowacki" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                 </div>
                 <div class="header-title">
                     <h1>Tomasz Głowacki</h1>
