--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
             opacity: 0.9;
             margin-bottom: 20px;
         }
+
+        .header-title h3 {
+            font-size: 1.2rem;
+            font-weight: 400;
+            opacity: 0.9;
+            margin-top: 5px;
+        }
         
         .contact-info {
             display: flex;
@@ -376,6 +383,7 @@
                 <div class="header-title">
                     <h1>Tomasz Głowacki</h1>
                     <h2>Business Analyst & Digital Assets Specialist</h2>
+                    <h3>Micro-investor (Stocks, Commodities, Digital Assets, Bonds)</h3>
                 </div>
                 <div class="contact-info">
                     <div class="contact-item">
