--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 <div class="header-title">
                     <h1>Tomasz Głowacki</h1>
                     <h2>Business Analyst & Digital Assets Specialist</h2>
-                    <h3>Micro-investor (Stocks, Commodities, Digital Assets, Bonds)</h3>
+                    <h3>Micro-investor (Stocks, Real Estate, Commodities, Digital Assets, Bonds)</h3>
                 </div>
                 <div class="contact-info">
                     <div class="contact-item">
