--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                                 <li>Conduct in-depth market sizing (TAM, SAM, SOM) and develop P&L forecasts, estimating development costs and key metrics.</li>
                                 <li>Assess the scalability and feasibility of business concepts, providing actionable recommendations.</li>
                                 <li>Present validated and refined ideas to the board, delivering compelling presentations.</li>
-                                <li>Actively participate in the research and structuring of a delta-neutral fund, collaborating with specialized firms.</li>
+                                <li>Actively participating in the research and structuring of a delta-neutral fund.</li>
                                 <li>Develop and implement AI-driven tools to automate research processes, improving operational efficiency.</li>
                             </ul>
                         </div>
