--- a/index.html
+++ b/index.html
@@ -533,14 +533,13 @@
                 <div class="skill-category">
                     <h3>Finance and Investments</h3>
                     <div class="skill-tags">
-                        <span class="skill-tag">Digital Assets</span>
-                        <span class="skill-tag">Capital Markets</span>
-                        <span class="skill-tag">Commodities</span>
-                        <span class="skill-tag">Market Research</span>
-                        <span class="skill-tag">Investment Analysis</span>
-                        <span class="skill-tag">Financial Modeling</span>
-                        <span class="skill-tag">Blockchain</span>
-                        <span class="skill-tag">Financial Planning</span>
+                        <span class="skill-tag">Financial modeling</span>
+                        <span class="skill-tag">Market research & analysis</span>
+                        <span class="skill-tag">Investment analysis (VC, digital assets)</span>
+                        <span class="skill-tag">Budgeting & forecasting</span>
+                        <span class="skill-tag">Risk assessment</span>
+                        <span class="skill-tag">Tokenomics & valuation</span>
+                        <span class="skill-tag">Financial reporting</span>
                         <span class="skill-tag">Algotrading</span>
                     </div>
                 </div>
@@ -559,6 +558,7 @@
                         <span class="skill-tag">Azure</span>
                         <span class="skill-tag">Alteryx</span>
                         <span class="skill-tag">Power BI</span>
+                        <span class="skill-tag">AI tools</span>
                     </div>
                 </div>
                 
@@ -578,12 +578,12 @@
                 <div class="skill-category">
                     <h3>Soft Skills</h3>
                     <div class="skill-tags">
+                        <span class="skill-tag">Problem-solving</span>
+                        <span class="skill-tag">Analytical thinking</span>
                         <span class="skill-tag">Communication</span>
-                        <span class="skill-tag">Presentations</span>
-                        <span class="skill-tag">Analytical Thinking</span>
-                        <span class="skill-tag">Problem Solving</span>
-                        <span class="skill-tag">Time Management</span>
-                        <span class="skill-tag">Teamwork</span>
+                        <span class="skill-tag">Teamwork & collaboration</span>
+                        <span class="skill-tag">Adaptability & flexibility</span>
+                        <span class="skill-tag">Ownership & responsibility</span>
                         <span class="skill-tag">Networking</span>
                     </div>
                 </div>
