--- a/index.html
+++ b/index.html
@@ -454,6 +454,9 @@
                             </div>
                             <div class="period">October 2021 - April 2024</div>
                         </div>
+                        <div class="company-description">
+                            <p>Global investment management company that provides investment management and related services to retail, institutional and high net-worth clients in jurisdictions around the world. It is listed on the New York Stock Exchange under the ticker symbol BEN.</p>
+                        </div>
                         <div class="job-description">
                             <ul>
                                 <li>Conducted in-depth research and identified high-potential, innovative blockchain startups worldwide.</li>
